# Hexa_Arch_Server_template

./: .gitignore  CHANGELOG.md  DEMO.md  DEMO_HANDOUT.md  DEMO_SLIDES.md  DEV_ONBOARDING.md  HANDOFF.md  HANDOFF_FINAL.md  HANDOFF_SUMMARY.md  NEXT_DEVELOPMENT.md  Notes.md  PROJECT_CONTEXT.md  PROMPT_COUNTER.md  README.md  RENAME_MONOLITH_TO_SERVICE_TEMPLATE.md  ROLES.md  RUNBOOK.md  ai_context.json  credentials.txt  requirements-manifest.json
monolith-template/: .env.example  ARCHITECTURE.md  HANDOFF_SUMMARY.md  MIGRATION_PLAN.md  Makefile  PROMPT_USAGE.md  README.md  README_ARCHITECTURE.md  RUNNING_WORKER.md  docker-compose.yml  mypy.ini  pyproject.toml  run_smoke.sh
monolith-template/.github/: CODEOWNERS  pull_request_template.md
monolith-template/ci/: dispatcher_integration.yml
monolith-template/docs/: QUANT_ONBOARDING.md
monolith-template/k8s/: alertmanager-deployment.yaml  alertmanager-service.yaml  deployment.yaml  grafana-dashboard-configmap.yaml  grafana-datasource.yaml  grafana-deployment.yaml  grafana-ingress.yaml  grafana-provisioning-configmap.yaml  grafana-service.yaml  hpa.yaml  ingress.yaml  loki-configmap.yaml  loki-deployment.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  secret-template.yaml  service.yaml
monolith-template/postman/: Monolith.postman_collection.json
monolith-template/scripts/: check_docs_protection.py  check_poetry_lock.py  run_postman_smoke.py
monolith-template/tests/: conftest.py  fake_redis.py  test_admin_api.py  test_admin_api_db.py  test_admin_ui_e2e.py  test_api_contracts_pytest.py  test_arch_check.py  (+7 more)
(+191 files in other folders)
