[tool.poetry]
name = "user-service"
version = "0.1.0"

packages = [
	{ include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
motor = "^3.1.1"
pydantic = "^2.6.0"
prometheus-client = "^0.16.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
